--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-pdf": "^6.2.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "remixicon": "^3.2.0",
     "remixicon-react": "^1.0.0",
     "web-vitals": "^2.1.4"
